Added initial notebook for comparison with Keras

--- a/examples/MNIST_exploration.ipynb
+++ b/examples/MNIST_exploration.ipynb
@@ -2,9 +2,104 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Process PoolWorker-8:\n",
+      "Process PoolWorker-6:\n",
+      "Process PoolWorker-5:\n",
+      "Process PoolWorker-2:\n",
+      "Process PoolWorker-7:\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "Traceback (most recent call last):\n",
+      "Process PoolWorker-1:\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Process PoolWorker-3:\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "Process PoolWorker-4:\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "    self.run()\n",
+      "Traceback (most recent call last):\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "    self.run()\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "    self.run()\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "    task = get()\n",
+      "    task = get()\n",
+      "    task = get()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "    racquire()\n",
+      "    racquire()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "KeyboardInterrupt\n",
+      "    racquire()\n",
+      "    return recv()\n",
+      "KeyboardInterrupt\n",
+      "    task = get()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
+      "KeyboardInterrupt\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "    task = get()\n",
+      "KeyboardInterrupt\n",
+      "    task = get()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "    racquire()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "    racquire()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "KeyboardInterrupt\n",
+      "    task = get()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "KeyboardInterrupt\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "    task = get()\n",
+      "    racquire()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "    racquire()\n",
+      "KeyboardInterrupt\n",
+      "KeyboardInterrupt\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -25,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,39 +299,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 0 in 0.10(s), cost = 4.348408\n",
-      "Iteration 100 in 10.69(s), cost = 1.302175\n",
-      "Iteration 200 in 21.20(s), cost = 1.134513\n",
-      "Iteration 300 in 31.95(s), cost = 1.058071\n",
-      "Iteration 400 in 42.90(s), cost = 1.000400\n",
-      "Iteration 500 in 53.93(s), cost = 0.963352\n",
-      "Iteration 600 in 64.94(s), cost = 0.933435\n",
-      "Iteration 700 in 75.63(s), cost = 0.876319\n",
-      "Iteration 800 in 82.89(s), cost = 0.810045\n",
-      "Iteration 900 in 91.73(s), cost = 0.766195\n",
-      "('Cost: ', 0.7337537302427808)\n",
-      "('Sol: ', array([ 2.52333813, -0.59303184,  1.22115297, ...,  2.01471075,\n",
-      "        5.56609287,  2.61835274]))\n",
-      "Time: 100 s\n"
+      "Iteration 0 in 0.05(s), cost = 87.985236\n",
+      "Iteration 100 in 5.48(s), cost = 22.189835\n",
+      "Iteration 200 in 10.91(s), cost = 13.751706\n",
+      "Iteration 300 in 16.34(s), cost = 10.445106\n",
+      "Iteration 400 in 21.77(s), cost = 8.541142\n",
+      "Iteration 500 in 27.20(s), cost = 7.317681\n",
+      "Iteration 600 in 32.62(s), cost = 6.492763\n",
+      "Iteration 700 in 38.05(s), cost = 5.917104\n",
+      "Iteration 800 in 43.48(s), cost = 5.503163\n",
+      "Iteration 900 in 48.88(s), cost = 5.197208\n",
+      "('Cost: ', 4.967251061505461)\n",
+      "('Sol: ', array([ 0.40585969,  0.07044592, -0.70363778, ...,  0.02601196,\n",
+      "       -0.02412911, -0.01160522]))\n",
+      "Time: 54 s\n"
      ]
     }
    ],
    "source": [
     "M = mdl.Model()\n",
-    "#M.add(layers.Linear(784,1))\n",
-    "M.add(layers.NonLinear(784,3))\n",
-    "M.add(layers.NonLinear(3,3))\n",
-    "M.add(layers.Linear(3,1))\n",
+    "M.add(layers.Linear(784,10))\n",
+    "#M.add(layers.NonLinear(784,3))\n",
+    "#M.add(layers.NonLinear(3,3))\n",
+    "M.add(layers.Linear(10,1))\n",
     "\n",
     "minim = minimizer.SGD()\n",
-    "sol=minim.train(mse(), M, np.transpose(X_train), Y_train.reshape(1,len(Y_train)), lr=100, maxiter=1000, batch_size=1000)\n",
+    "sol=minim.train(mse(), M, np.transpose(X_train), Y_train.reshape(1,len(Y_train)), lr=0.01, maxiter=1000, batch_size=1000)\n",
     "\n",
     "#minim = minimizer.BFGS()\n",
     "#sol=minim.train(mse(), M, np.transpose(X_train), Y_train.reshape(1,len(Y_train)), maxiter=1000)"
@@ -244,7 +339,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3., 1., 0., ..., 3., 7., 4.]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.abs(np.round(np.real(M.predict(np.transpose(X_train)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -253,29 +368,37 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.93      0.66      0.77      1001\n",
-      "          1       0.72      0.75      0.73      1127\n",
-      "          2       0.26      0.21      0.23       991\n",
-      "          3       0.36      0.44      0.40      1032\n",
-      "          4       0.10      0.04      0.05       980\n",
-      "          5       0.24      0.66      0.35       863\n",
-      "          6       0.26      0.15      0.19      1014\n",
-      "          7       0.29      0.16      0.21      1070\n",
-      "          8       0.27      0.61      0.37       944\n",
-      "          9       0.00      0.00      0.00       978\n",
+      "        0.0       0.16      0.08      0.10      1001\n",
+      "        1.0       0.19      0.19      0.19      1127\n",
+      "        2.0       0.13      0.19      0.15       991\n",
+      "        3.0       0.13      0.20      0.16      1032\n",
+      "        4.0       0.10      0.17      0.13       980\n",
+      "        5.0       0.09      0.12      0.10       863\n",
+      "        6.0       0.08      0.08      0.08      1014\n",
+      "        7.0       0.14      0.09      0.11      1070\n",
+      "        8.0       0.18      0.08      0.11       944\n",
+      "        9.0       0.40      0.10      0.16       978\n",
+      "       10.0       0.00      0.00      0.00         0\n",
+      "       11.0       0.00      0.00      0.00         0\n",
+      "       12.0       0.00      0.00      0.00         0\n",
+      "       13.0       0.00      0.00      0.00         0\n",
       "\n",
-      "avg / total       0.35      0.37      0.34     10000\n",
+      "avg / total       0.16      0.13      0.13     10000\n",
       "\n",
-      "[[661 184  94  32   9  19   1   1   0   0]\n",
-      " [  0 845 186  59  25   6   3   1   2   0]\n",
-      " [ 28  74 204 599  40  33   3   3   7   0]\n",
-      " [  9  64 250 450  93 110  36   9  11   0]\n",
-      " [  2   1   4   7  35 809  80  25  17   0]\n",
-      " [  2   3  27  42  72 566  91  44  16   0]\n",
-      " [  3   4   3   9  48 683 156  83  25   0]\n",
-      " [  0   1   9  16  18  86  93 176 671   0]\n",
-      " [  0   0  11  28  14  62  94 159 576   0]\n",
-      " [  2   1   1   3   5  15  32  98 821   0]]\n"
+      "[[ 77 190 188 182 187 102  49  16   6   4   0   0   0   0]\n",
+      " [ 86 217 262 267 184  74  27   6   3   1   0   0   0   0]\n",
+      " [108 196 185 154 117  98  71  18  24  10   6   1   2   1]\n",
+      " [ 42  94 192 208 163 130  88  54  31  10  10   6   4   0]\n",
+      " [ 20  52  96 133 164 173 158  97  54  25   5   2   1   0]\n",
+      " [ 47 120 133 122 146 107  79  69  26  10   3   1   0   0]\n",
+      " [ 50 124 170 181 183 122  81  63  22  13   4   1   0   0]\n",
+      " [ 22  91 106 182 189 166 155  96  37  17   7   1   1   0]\n",
+      " [ 23  43  74 126 124 149 134 107  72  57  28   5   1   1]\n",
+      " [  5  21  34  66 105 131 162 140 126  97  53  27   8   3]\n",
+      " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0]]\n"
      ]
     }
    ],
@@ -290,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -299,29 +422,35 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.90      0.64      0.75       980\n",
-      "          1       0.70      0.75      0.72      1135\n",
-      "          2       0.27      0.20      0.23      1032\n",
-      "          3       0.33      0.40      0.36      1010\n",
-      "          4       0.07      0.02      0.03       982\n",
-      "          5       0.23      0.60      0.33       892\n",
-      "          6       0.20      0.12      0.15       958\n",
-      "          7       0.21      0.13      0.16      1028\n",
-      "          8       0.27      0.60      0.37       974\n",
-      "          9       0.00      0.00      0.00      1009\n",
+      "        0.0       0.39      0.11      0.18       980\n",
+      "        1.0       0.33      0.24      0.28      1135\n",
+      "        2.0       0.12      0.15      0.13      1032\n",
+      "        3.0       0.14      0.23      0.18      1010\n",
+      "        4.0       0.10      0.17      0.13       982\n",
+      "        5.0       0.11      0.19      0.14       892\n",
+      "        6.0       0.13      0.16      0.14       958\n",
+      "        7.0       0.19      0.16      0.17      1028\n",
+      "        8.0       0.14      0.07      0.10       974\n",
+      "        9.0       0.53      0.12      0.19      1009\n",
+      "       10.0       0.00      0.00      0.00         0\n",
+      "       11.0       0.00      0.00      0.00         0\n",
+      "       12.0       0.00      0.00      0.00         0\n",
       "\n",
-      "avg / total       0.32      0.35      0.32     10000\n",
+      "avg / total       0.22      0.16      0.17     10000\n",
       "\n",
-      "[[626 169  99  20  25  30   6   3   2   0]\n",
-      " [  1 853 194  47  18   6   7   7   2   0]\n",
-      " [ 33  82 211 591  35  32  20  12  16   0]\n",
-      " [ 21  78 187 405  71 137  48  39  24   0]\n",
-      " [  0   4   5   2  22 783  78  62  26   0]\n",
-      " [  3  13  33  58  52 534  89  70  40   0]\n",
-      " [  6  11  13  22  61 637 117  64  27   0]\n",
-      " [  0   7  13  33  21  74  65 136 679   0]\n",
-      " [  0   5  13  30  24  86  88 143 585   0]\n",
-      " [  4   1   7   6   6  37  62  98 788   0]]\n"
+      "[[111 216 220 207 126  63  28   8   1   0   0   0   0]\n",
+      " [ 75 271 398 247  85  39  17   3   0   0   0   0   0]\n",
+      " [ 37  89 155 226 248 150  77  36  11   3   0   0   0]\n",
+      " [ 18  71 155 229 208 158  96  53  16   5   1   0   0]\n",
+      " [ 10  33  43 105 170 208 208 113  69  21   2   0   0]\n",
+      " [ 14  45 119 186 215 168 102  27  12   4   0   0   0]\n",
+      " [ 11  43  76 141 188 196 156  82  45  14   5   1   0]\n",
+      " [  3  22  51 106 166 211 199 161  74  25   9   1   0]\n",
+      " [  1  13  54 120 176 185 174 142  70  34   4   1   0]\n",
+      " [  2   8  18  39  73 116 171 211 187 118  49  12   5]\n",
+      " [  0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   0   0   0   0]]\n"
      ]
     }
    ],
