Added random number init class for layers

--- a/examples/ExpectationModel_tests.ipynb
+++ b/examples/ExpectationModel_tests.ipynb
@@ -4,102 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Process PoolWorker-8:\n",
-      "Traceback (most recent call last):\n",
-      "Process PoolWorker-3:\n",
-      "Process PoolWorker-1:\n",
-      "Process PoolWorker-7:\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "Process PoolWorker-2:\n",
-      "Process PoolWorker-6:\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "Process PoolWorker-5:\n",
-      "Process PoolWorker-4:\n",
-      "    self.run()\n",
-      "    self.run()\n",
-      "    self.run()\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "    self.run()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "    self.run()\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "    self.run()\n",
-      "    self.run()\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "    self.run()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "    task = get()\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
-      "    racquire()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "    racquire()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "KeyboardInterrupt\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "KeyboardInterrupt\n",
-      "    task = get()\n",
-      "    task = get()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
-      "    racquire()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
-      "    task = get()\n",
-      "    racquire()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "KeyboardInterrupt\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
-      "KeyboardInterrupt\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "    task = get()\n",
-      "    return recv()\n",
-      "    task = get()\n",
-      "    racquire()\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
-      "KeyboardInterrupt\n",
-      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
-      "    racquire()\n",
-      "    racquire()\n",
-      "KeyboardInterrupt\n",
-      "KeyboardInterrupt\n",
-      "KeyboardInterrupt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -113,6 +18,8 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "from rtbm.costfunctions import mse, crossentropy\n",
+    "from rtbm.activations import tanh, sigmoid\n",
+    "\n",
     "from rtbm import minimizer\n",
     "\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
@@ -523,7 +430,7 @@
    "source": [
     "minim = minimizer.CMA(False)\n",
     "\n",
-    "sol=minim.train(mse(), M, np.transpose(X_train), T, maxiter=10)"
+    "sol=minim.train(mse(), M, np.transpose(X_train), T, maxiter=100)"
    ]
   },
   {
@@ -571,12 +478,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "M = mdl.Model()\n",
-    "M.add(layers.NonLinear(784,10))\n",
+    "M.add(layers.NonLinear(784,10,sigmoid()))\n",
+    "M.add(layers.Linear(10,10))\n",
     "M.add(layers.SoftMaxLayer(10))\n",
     "#M.add(layers.DiagExpectationUnitLayer(784,10))\n",
     "#"
@@ -584,34 +492,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 0 in 0.26(s), cost = 0.449289\n",
-      "Iteration 100 in 26.05(s), cost = 0.448915\n",
-      "Iteration 200 in 51.82(s), cost = 0.448705\n",
-      "Iteration 300 in 78.08(s), cost = 0.448510\n",
-      "Iteration 400 in 109.98(s), cost = 0.448325\n",
-      "Iteration 500 in 141.13(s), cost = 0.448142\n",
-      "Iteration 600 in 166.89(s), cost = 0.447955\n",
-      "Iteration 700 in 192.65(s), cost = 0.447765\n",
-      "Iteration 800 in 218.40(s), cost = 0.447574\n",
-      "Iteration 900 in 244.15(s), cost = 0.447385\n",
-      "('Cost: ', 0.44720197973814474)\n",
-      "('Sol: ', array([-0.52742672, -1.27278432, -0.28401372, ..., -0.28472256,\n",
-      "       -0.05574293,  0.35195976]))\n",
-      "Time: 273 s\n"
+      "Iteration 0 in 0.27(s), cost = 0.672931\n"
      ]
     }
    ],
    "source": [
     "minim = minimizer.SGD()\n",
     "\n",
-    "sol=minim.train(mse(), M, np.transpose(X_train), T, lr=100, maxiter=1000)"
+    "sol=minim.train(mse(), M, np.transpose(X_train), T, lr=0.15, maxiter=100, log_step=10, batch_size=10000)"
    ]
   },
   {
@@ -619,49 +514,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "minim = minimizer.CMD(False)\n",
-    "\n",
-    "sol=minim.train(mse(), M, np.transpose(X_train), T, maxiter=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       0.02      0.02      0.02      1001\n",
-      "          1       0.01      0.01      0.01      1127\n",
-      "          2       0.12      0.06      0.08       991\n",
-      "          3       0.05      0.03      0.04      1032\n",
-      "          4       0.01      0.01      0.01       980\n",
-      "          5       0.12      0.06      0.08       863\n",
-      "          6       0.05      0.04      0.04      1014\n",
-      "          7       0.17      0.63      0.27      1070\n",
-      "          8       0.13      0.15      0.14       944\n",
-      "          9       0.10      0.07      0.08       978\n",
-      "\n",
-      "avg / total       0.08      0.11      0.08     10000\n",
-      "\n",
-      "[[ 18 178 210   0  94  88  52 182  93  86]\n",
-      " [283   8   5  37 112  14 156 318 165  29]\n",
-      " [ 24  53  59 109  15  35 221 308  80  87]\n",
-      " [ 23  57  11  31 133  19  26 526 104 102]\n",
-      " [ 58 129  30  77   5  39   9 540  48  45]\n",
-      " [ 44 148  49  27  96  49  48 161 164  77]\n",
-      " [ 24  43  15 218   5  12  40 296 290  71]\n",
-      " [ 88  45  33   7  36  97  33 673   3  55]\n",
-      " [112  29  67  73  24  44 196 234 143  22]\n",
-      " [ 54  28  20  10   3  15  26 744  11  67]]\n"
-     ]
-    }
-   ],
    "source": [
     "P=np.argmax(M.predict(np.transpose(X_train)),axis=0)\n",
     "\n",
@@ -671,41 +523,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       0.04      0.03      0.03       980\n",
-      "          1       0.01      0.00      0.00      1135\n",
-      "          2       0.11      0.06      0.08      1032\n",
-      "          3       0.05      0.03      0.04      1010\n",
-      "          4       0.01      0.00      0.01       982\n",
-      "          5       0.13      0.05      0.07       892\n",
-      "          6       0.02      0.02      0.02       958\n",
-      "          7       0.17      0.65      0.27      1028\n",
-      "          8       0.10      0.11      0.10       974\n",
-      "          9       0.08      0.06      0.07      1009\n",
-      "\n",
-      "avg / total       0.07      0.10      0.07     10000\n",
-      "\n",
-      "[[ 26 144 238   1  90  64  70 160  95  92]\n",
-      " [268   4   1  36  87   8 189 309 196  37]\n",
-      " [ 54  39  58 129  14  38 245 270  83 102]\n",
-      " [ 26  30  12  29 155  17  31 476  88 146]\n",
-      " [ 56 149  23  78   4  41  16 536  34  45]\n",
-      " [ 65  96  60  35 104  47  60 135 201  89]\n",
-      " [ 42  25  17 184  11  16  21 312 263  67]\n",
-      " [ 60  28  35  13  35  86  41 669  10  51]\n",
-      " [110  26  58  87  28  34 231 282 106  12]\n",
-      " [ 35  27  10  16   4  13  28 807  11  58]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "P=np.argmax(M.predict(np.transpose(X_test)),axis=0)\n",
     "\n",
@@ -713,6 +533,13 @@
     "print(classification_report(Y_test,P.T))\n",
     "print(confusion_matrix(Y_test, P.T))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
