Glorot initializers added

--- a/examples/ExpectationModel_tests.ipynb
+++ b/examples/ExpectationModel_tests.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (initializers.py, line 34)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/home/krefl/RTBM/rtbm/initializers.py\"\u001b[0;36m, line \u001b[0;32m34\u001b[0m\n\u001b[0;31m    return np.random.uniform(-limit,limit,S)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -19,6 +28,7 @@
     "\n",
     "from rtbm.costfunctions import mse, crossentropy\n",
     "from rtbm.activations import tanh, sigmoid\n",
+    "from rtbm.initializers import uniform, normal, xavier\n",
     "\n",
     "from rtbm import minimizer\n",
     "\n",
@@ -386,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +493,7 @@
    "outputs": [],
    "source": [
     "M = mdl.Model()\n",
-    "M.add(layers.NonLinear(784,10,sigmoid()))\n",
+    "M.add(layers.NonLinear(784,10,sigmoid(),normal()))\n",
     "M.add(layers.Linear(10,10))\n",
     "M.add(layers.SoftMaxLayer(10))\n",
     "#M.add(layers.DiagExpectationUnitLayer(784,10))\n",
@@ -494,19 +504,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration 0 in 0.27(s), cost = 0.672931\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "minim = minimizer.SGD()\n",
     "\n",
-    "sol=minim.train(mse(), M, np.transpose(X_train), T, lr=0.15, maxiter=100, log_step=10, batch_size=10000)"
+    "sol=minim.train(mse(), M, np.transpose(X_train), T, lr=10, maxiter=100, log_step=10, batch_size=1000)"
    ]
   },
   {
@@ -533,6 +535,13 @@
     "print(classification_report(Y_test,P.T))\n",
     "print(confusion_matrix(Y_test, P.T))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
