DiagExpUnitLayer backprop part changed to new norm_eval and moved partly into mathtools

--- a/tests/RiemannThetaTests.ipynb
+++ b/tests/RiemannThetaTests.ipynb
@@ -21,15 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.060475\n",
-      "0.051506\n"
+      "0.069062\n",
+      "0.056148\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
        "0.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,15 +69,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.069045\n",
-      "0.060207\n"
+      "0.077268\n",
+      "0.066748\n"
      ]
     },
     {
@@ -86,7 +86,7 @@
        "0.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,28 +112,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.-3593.98996662j 0.+2555.31672438j 0.+2143.84090438j ...\n",
-      " 0. -989.47761356j 0.-5507.41031736j 0.+6062.69897214j]\n",
-      "0.041723\n",
-      "[0.-3593.98996662j 0.+2555.31672438j 0.+2143.84090438j ...\n",
-      " 0. -989.47761356j 0.-5507.41031736j 0.+6062.69897214j]\n",
-      "0.01817\n"
+      "[ -6743910.34834023+0.j -30204242.32085261+0.j -18465046.6032291 +0.j ...\n",
+      " -34055009.63924482+0.j -13132294.08798072+0.j  -5744693.64561704+0.j]\n",
+      "0.042393\n",
+      "[ -6743910.34834023+0.j -30204242.32085261+0.j -18465046.6032291 +0.j ...\n",
+      " -34055009.63924481+0.j -13132294.08798072+0.j  -5744693.64561704+0.j]\n",
+      "0.017219\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.0000000000009094947017729282"
+       "0.000000007450580596923828"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,13 +142,13 @@
     "# Ratio \n",
     "# Derivatives\n",
     "tic = time.clock()\n",
-    "t1=RiemannTheta.normalized_eval(X,Q, mode=0, derivs=[[1]])\n",
+    "t1=RiemannTheta.normalized_eval(X,Q, mode=0, derivs=[[1,1]])\n",
     "toc = time.clock()\n",
     "print(t1)\n",
     "print(toc-tic)\n",
     "\n",
     "tic = time.clock()\n",
-    "t2=RiemannTheta.normalized_eval(X,Q, mode=1, derivs=[[1]])\n",
+    "t2=RiemannTheta.normalized_eval(X,Q, mode=1, derivs=[[1,1]])\n",
     "toc = time.clock()\n",
     "print(t2)\n",
     "\n",
@@ -160,15 +160,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.142657\n",
-      "0.058248\n"
+      "[[        0.        +2.59689190e+03j         0.        +5.49583292e+03j\n",
+      "          0.        -4.29709015e+03j ...         0.        +5.83566164e+03j\n",
+      "          0.        +3.62384206e+03j         0.        +2.39679595e+03j]\n",
+      " [ -6743910.34834024+0.00000000e+00j -30204242.32085257+0.00000000e+00j\n",
+      "  -18465046.60322909+0.00000000e+00j ... -34055009.63924479+0.00000000e+00j\n",
+      "  -13132294.08798071+0.00000000e+00j  -5744693.64561707+0.00000000e+00j]\n",
+      " [        0.        -1.75135325e+10j         0.        -1.65998160e+11j\n",
+      "          0.        +7.93465099e+10j ...         0.        -1.98734247e+11j\n",
+      "          0.        -4.75898150e+10j         0.        -1.37691596e+10j]]\n",
+      "0.14764\n",
+      "[[        0.        +2.59689190e+03j         0.        +5.49583292e+03j\n",
+      "          0.        -4.29709015e+03j ...         0.        +5.83566164e+03j\n",
+      "          0.        +3.62384206e+03j         0.        +2.39679595e+03j]\n",
+      " [ -6743910.34834024+0.00000000e+00j -30204242.32085257+0.00000000e+00j\n",
+      "  -18465046.60322909+0.00000000e+00j ... -34055009.63924479+0.00000000e+00j\n",
+      "  -13132294.08798071+0.00000000e+00j  -5744693.64561707+0.00000000e+00j]\n",
+      " [        0.        -1.75135325e+10j         0.        -1.65998160e+11j\n",
+      "          0.        +7.93465099e+10j ...         0.        -1.98734247e+11j\n",
+      "          0.        -4.75898150e+10j         0.        -1.37691596e+10j]]\n",
+      "0.05769\n"
      ]
     },
     {
@@ -177,7 +195,7 @@
        "0.000030517578125"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,19 +207,39 @@
     "tic = time.clock()\n",
     "t1=RiemannTheta.normalized_eval(X,Q, mode=0, derivs=np.array( [ [1], [1,1], [1,1,1] ]  )   )\n",
     "toc = time.clock()\n",
-    "#print(t1)\n",
+    "print(t1)\n",
     "print(toc-tic)\n",
     "\n",
     "\n",
     "tic = time.clock()\n",
     "t2=RiemannTheta.normalized_eval(X,Q, mode=1, derivs=np.array( [ [1], [1,1], [1,1,1] ]  )   )\n",
     "toc = time.clock()\n",
-    "#print(t2)\n",
+    "print(t2)\n",
     "\n",
     "print(toc-tic)\n",
     "\n",
     "x=t1-t2\n",
     "max(abs(x).flatten())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 15000)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1.shape"
    ]
   },
   {
@@ -213,34 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ -0.13113353+8.30590949e-18j -19.58437169+1.18661719e-08j\n",
-      " -18.97621675+7.95421298e-09j ... -23.73104105-3.14159257e+00j\n",
-      " -19.14360294+3.14159265e+00j -20.03175081+3.14159265e+00j]\n",
-      "0.872431\n",
-      "[ -0.13113353+8.30590949e-18j -19.58437169+1.18661719e-08j\n",
-      " -18.97621675+7.95421298e-09j ... -23.73104105-3.14159257e+00j\n",
-      " -19.14360294+3.14159265e+00j -20.03175081+3.14159265e+00j]\n",
-      "0.40036\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# RT\n",
     "Q=np.zeros((1,1), dtype=complex)\n",
@@ -267,34 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-22.59018986-3.14159007e+00j -25.35407471-3.14155616e+00j\n",
-      " -22.75216295-3.14159198e+00j ... -21.70924032-3.14159028e+00j\n",
-      "  -1.63942641-3.14159265e+00j  -0.0846966 -1.04552914e-15j]\n",
-      "1.110256\n",
-      "[-22.59018986-3.14159007e+00j -25.35407471-3.14155616e+00j\n",
-      " -22.75216295-3.14159198e+00j ... -21.70924032-3.14159028e+00j\n",
-      "  -1.63942641-3.14159265e+00j  -0.0846966 -1.04552914e-15j]\n",
-      "0.496298\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tic = time.clock()\n",
     "t1=RiemannTheta.log_eval(X,Q, mode=0, derivs=[[1]])\n",
@@ -315,34 +303,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[105.21544958-3.55681232e-03j  99.82786849-1.05358923e-14j\n",
-      " -54.73341852-1.30371959e-14j ... 230.54678338-3.19125760e-03j\n",
-      "   9.53899692+5.93264439e-04j 713.0646845 -2.16571112e-01j]\n",
-      "1.515752\n",
-      "[105.21544958-3.55681232e-03j  99.82786849-1.05358923e-14j\n",
-      " -54.73341852-1.30371959e-14j ... 230.54678338-3.19125760e-03j\n",
-      "   9.53899692+5.93264439e-04j 713.0646845 -2.16571112e-01j]\n",
-      "0.486064\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.000000001862872509030306"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ratio \n",
     "# Derivatives\n",
